--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/loader": "^1.6.14",
     "@mdx-js/runtime": "^1.6.14",
     "@next/mdx": "^9.5.0",
+    "disqus-react": "^1.0.9",
     "gray-matter": "^4.0.2",
     "next": "^9.5.0",
     "prop-types": "^15.7.2",
