--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "disqus-react": "^1.0.9",
     "gray-matter": "^4.0.2",
     "next": "^9.5.1",
+    "prism-react-renderer": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
