--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "format-watch": "npm run format && onchange \"**/*.{js,jsx,json,md}\" -- prettier --write {{changed}}",
-    "deploy": "vercel --prod"
+    "deploy": "git push origin main && vercel --prod"
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
