--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "deploy": "git push origin main && vercel --prod"
   },
   "dependencies": {
+    "@artsy/fresnel": "^1.3.1",
     "@emotion/react": "^11.1.4",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/runtime": "^1.6.22",
     "@next/mdx": "^10.0.5",
     "disqus-react": "^1.0.10",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-react": "^7.22.0",
     "gray-matter": "^4.0.2",
     "next": "^10.0.5",
     "prism-react-renderer": "^1.1.1",
@@ -23,9 +27,14 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
-    "theme-ui": "^0.3.5"
+    "theme-ui": "^0.3.5",
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
+    "@types/theme-ui": "^0.3.7",
     "onchange": "^7.1.0",
     "prettier": "^2.2.1"
   },
