--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "theme-ui": "^0.3.5"
+    "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
+    "@types/theme-ui": "^0.3.7",
     "onchange": "^7.1.0",
     "prettier": "^2.2.1"
   },
