--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,6 @@ jobs:
       - run: yarn install
       - run: yarn type-check
       - run: yarn test
-      - run: yarn lint
+#       - run: yarn lint
 
     
