--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@artsy/fresnel": "^1.3.1",
+    "@emotion/babel-plugin": "^11.1.2",
     "@emotion/react": "^11.1.4",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/runtime": "^1.6.22",
@@ -27,6 +28,7 @@
     "disqus-react": "^1.0.10",
     "gray-matter": "^4.0.2",
     "next": "^10.0.5",
+    "next-images": "^1.7.0",
     "prism-react-renderer": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -37,14 +39,14 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.25",
-    "@types/react-dom": "^17.0.0",
     "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
     "@types/theme-ui": "^0.3.7",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
+    "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-react": "^7.22.0",
-    "eslint": "^7.19.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "onchange": "^7.1.0",
