--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,7 @@
     "node": true
   },
   "rules": {
-    "react/react-in-jsx-scope": "warn",
+    "react/react-in-jsx-scope": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
     "@typescript-eslint/indent": "off",
