wip: big conversion to theme-ui 0.6

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "target": "es5"
   },
   "exclude": ["node_modules", ".next", "out"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js", "src/pages/[slug]."]
 }
