--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
-    "theme-ui": "^0.3.5",
+    "theme-ui": "^0.6.0-alpha.5",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
